--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bootstrap": "^5.1.3",
+    "masonry-layout": "^4.2.2",
     "ngx-chips": "^3.0.0",
     "ngx-cookie": "^6.0.0",
+    "ngx-masonry": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
