--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
               "node_modules/swiper/swiper-bundle.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
             ]
           },
           "configurations": {
